<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="120dp">

    <ImageView
        android:id="@+id/img_biglogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/big_logo"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/container_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_oval"
        android:padding="12dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:textColor="#C4C4C4" />

    <TextView
        android:id="@+id/txt_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_acc"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"/>


</LinearLayout>
