<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:gravity="bottom">

    <LinearLayout
        android:id="@+id/container_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="120dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/img_newacc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/new_acc"
            android:contentDescription="@string/todo" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_email_acc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password_last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pasword2"
                android:textSize="15sp"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/person_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:textSize="15sp"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorAccent"
                    android:autofillHints="" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/person_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel"
                android:inputType="textPhonetic"
                android:textSize="15sp"
                android:textColor="@color/colorAccent"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/person_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:maxLines="10"
                android:minLines="5"
                android:inputType="textMultiLine"
                android:lines="8"
                android:gravity="top|left"
                android:textSize="15sp"
                android:scrollbars="vertical"
                android:textColor="@color/colorAccent"
                android:autofillHints="" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_oval"
            android:padding="12dp"
            android:text="@string/next"
            android:textColor="#C4C4C4"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>